--- a/class-components/package.json
+++ b/class-components/package.json
@@ -29,7 +29,8 @@
     "lint-staged": "^15.2.7",
     "prettier": "3.3.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
