--- a/class-components/tsconfig.node.json
+++ b/class-components/tsconfig.node.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": false,
+    "outDir": "./dist"
   },
   "include": ["vite.config.ts"]
 }
