--- a/class-components/package.json
+++ b/class-components/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/ui": "^2.0.2",
+    "classnames": "^2.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
     "eslint-plugin-react-hooks": "^4.6.2",
