--- a/class-components/package.json
+++ b/class-components/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "prepare": "cd .. && husky class-components/.husky",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -26,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.0.4",
     "@vitest/ui": "^2.0.2",
     "classnames": "^2.5.1",
     "eslint": "^8.57.0",
